fixed skills icon wrapping issue

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
-  body {
+  * {
+    background-color: ivory;
+  }
+    
+    body {
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -10,12 +14,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #e2e2e2;
   }
 
   .icons {
     list-style: none;
     display:flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
   }
 
   .socialNavButtons {
@@ -33,7 +38,7 @@
     flex-wrap: wrap;
     flex-direction: row-reverse;
     justify-content: center;
-    margin: 3rem 3rem 3rem 3rem;
+    padding: 3rem 3rem 3rem 3rem;
   }
   
   .aboutMeLeftSide {
@@ -53,7 +58,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 3rem 3rem 3rem 3rem;
+    padding: 3rem 3rem 3rem 3rem;
   }
   
   .projectSection {
@@ -67,7 +72,6 @@
     justify-content: center;
     padding: 0.5rem;
     font-weight: bold;
-    background-color: #e2e2e2;
     margin-top: auto;
   }
 
@@ -82,14 +86,13 @@
     justify-content: center;
     flex-direction: column;
     align-content: center;
-    margin: 3rem 3rem 3rem 3rem;
+    padding: 3rem 3rem 3rem 3rem;
   }
 
 
   .skillLogo {
     max-height: 8rem;
     padding-right: 3rem;
-    display:flex;
   }
 
 
